# TulipAgent

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/agent/: __init__.py  context.py  graph.py  llm_factory.py  prompts.py  tools.py
backend/app/models/: __init__.py  account.py  anniversary.py  conversation.py  event.py  group.py  memory.py  package.py  todo.py  user.py  work_log.py
backend/app/routers/: __init__.py  admin.py  anniversaries.py  auth.py  chat.py  events.py  llm.py  memory.py  packages.py  todos.py  work_logs.py
backend/app/services/: package_service.py  scheduler.py
backend/tests/: conftest.py  test_chat.py  test_events.py  test_sharing.py  test_todos.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/admin/: account-dialog.tsx  group-dialog.tsx
frontend/src/components/anniversaries/: anniversary-dialog.tsx  anniversary-edit-dialog.tsx  anniversary-list.tsx
frontend/src/components/chat/: chat-container.tsx  chat-history-dialog.tsx  chat-input.tsx  chat-message.tsx
frontend/src/components/events/: event-dialog.tsx  event-list.tsx  weekly-calendar.tsx
frontend/src/components/profile/: phone-dialog.tsx  user-menu.tsx
frontend/src/components/todos/: todo-dialog.tsx  todo-list.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/lib/: api.ts  data-events.ts  utils.ts
nginx/: default.conf
(+9 files in other folders)
