[project]
name = "tulipagent"
version = "0.1.0"
description = "个人AI助理 - 两人共用的智能助手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
    # 数据库
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # LangChain 生态
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.5",
    # 向量数据库
    "chromadb>=0.5.0",
    # 定时任务
    "apscheduler>=3.10.0",
    # 工具库
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    # 数据处理
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
